objects/KBANK_STM__c.object
<CustomObject>
    <description>This object tracks the amount and transaction of the customer (Last 12 months)
Display as Visualforce tab in the customer detail page</description>
    <fields>
        <fullName>Amount_Inflow__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Inflow</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Outflow__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Outflow</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>As_of_Date__c</fullName>
        <label>As of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CASA_Average_Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CASA Average Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CIS_ID__c</fullName>
        <label>CIS ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>KBank Statements</relationshipLabel>
        <relationshipName>KBANK_STM</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cheque_Paid_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cheque Paid Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cheque_Paid_Items__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Cheque Paid (Items)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cheque_Return_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cheque Return Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cheque_Return_Items__c</fullName>
        <label>Cheque Return (Items)</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TXN_Inflow__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>TXN Inflow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TXN_Outflow__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>TXN Outflow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade_Turn_Export__c</fullName>
        <label>Trade Turn Export</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trade_Turn_Import__c</fullName>
        <label>Trade Turn Import</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>KBank Statement</label>
    <nameField>
        <label>Month</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KBank Statements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>